// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article screen renders expected components and styles in desktop 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        >
          Help
        </h1>
      </header>
      <div
        class="content scrollContainer scrollContainer "
      >
        <div>
          <div
            class="content "
          >
            <h2
              class="title"
            >
              help
            </h2>
            <div
              class="article"
            >
              here
            </div>
          </div>
        </div>
      </div>
      <footer
        class="footer footer "
      />
    </div>
  </div>
</div>
`;

exports[`article screen renders expected components and styles in mobile 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="container flexContainer mobile"
      data-testid="scrollcontainer"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title titleMobile"
        >
          Help
        </h1>
      </header>
      <div
        class="content scrollContainerMobile scrollContainer  contentMobile"
      >
        <div>
          <div
            class="content contentMobile"
          >
            <h2
              class="title"
            >
              help
            </h2>
            <div
              class="article"
            >
              here
            </div>
          </div>
        </div>
      </div>
      <footer
        class="footer footer "
      />
    </div>
  </div>
</div>
`;

exports[`conversation screen renders expected components and styles in desktop 1`] = `
<div>
  <div>
    <div
      class="container flexContainer desktop containerDesktop"
      data-testid="scrollcontainer"
      style="height: 550px;"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title"
        >
          Answer Bot
        </h1>
      </header>
      <div
        class="content scrollContainer"
      >
        <div>
          <div
            class="messages"
          />
        </div>
      </div>
      <footer
        class="footer footerWithLogo "
      >
        <div>
          <div
            class="textField TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
            data-garden-id="textfields.text_group"
            data-garden-version="3.7.0"
          >
            <label
              class="label Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
              data-garden-id="textfields.label"
              data-garden-version="3.7.0"
              for="garden-text-field-0--input"
              id="garden-text-field-0--label"
            >
              Type your question here...
            </label>
            <textarea
              aria-invalid="false"
              aria-labelledby="garden-text-field-0--label"
              class="input Textarea-sc-1alsvvb-0 text__c-txt__input--area___3VBq- dcOmlb Input-sc-4gf5js-0-textarea text__c-txt__input___2ZeOl kpjxwv"
              data-garden-id="textfields.textarea"
              data-garden-version="3.7.0"
              id="garden-text-field-0--input"
              name="answerBotInputValue"
              placeholder="Type your question here..."
              rows="3"
            />
          </div>
        </div>
      </footer>
    </div>
    <a
      class="
      logo
      formSuccess
      
      zendeskLogo 
    "
      href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
      tabindex="-1"
      target="_blank"
    >
      <span
        class="container icon Icon--zendesk"
        data-testid="Icon--zendesk"
        type="Icon--zendesk"
      >
        test-file-stub
      </span>
      <span
        class="hidden"
      >
        zendesk
      </span>
    </a>
  </div>
</div>
`;

exports[`conversation screen renders expected components and styles in mobile 1`] = `
<div>
  <div>
    <div
      class="container flexContainer mobile"
      data-testid="scrollcontainer"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title titleMobile"
        >
          Answer Bot
        </h1>
      </header>
      <div
        class="content scrollContainerMobile contentMobile"
      >
        <div>
          <div
            class="messages"
          />
        </div>
      </div>
      <footer
        class="footer footerMobile footerMobileWithLogo "
      >
        <div>
          <div
            class="containerMobile"
          >
            <div
              class="inputContainerMobile"
            >
              <div
                class="textField TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
                data-garden-id="textfields.text_group"
                data-garden-version="3.7.0"
              >
                <label
                  class="label Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                  for="garden-text-field-2--input"
                  id="garden-text-field-2--label"
                >
                  Type your question here...
                </label>
                <textarea
                  aria-invalid="false"
                  aria-labelledby="garden-text-field-2--label"
                  class="input inputMobile fieldMobile Textarea-sc-1alsvvb-0 text__c-txt__input--area___3VBq- dcOmlb Input-sc-4gf5js-0-textarea text__c-txt__input___2ZeOl kpjxwv"
                  data-garden-id="textfields.textarea"
                  data-garden-version="3.7.0"
                  id="garden-text-field-2--input"
                  name="answerBotInputValue"
                  placeholder="Type your question here..."
                  rows="1"
                />
              </div>
            </div>
            <div
              class="wrapper"
            >
              <button
                class="button button"
                title="Send"
                type="button"
              >
                <span
                  class="container iconSendAnswerBotMobile Icon--sendChat"
                  data-testid="Icon--sendChat"
                  type="Icon--sendChat"
                >
                  test-file-stub
                </span>
                <span
                  class="altText"
                >
                  Send
                </span>
              </button>
              <div
                class="tooltip"
              >
                Send
              </div>
            </div>
          </div>
        </div>
      </footer>
    </div>
    <a
      class="
      logo
      formSuccess
      
      zendeskLogo zendeskLogoChatMobile
    "
      href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
      tabindex="-1"
      target="_blank"
    >
      <span
        class="container icon Icon--zendesk"
        data-testid="Icon--zendesk"
        type="Icon--zendesk"
      >
        test-file-stub
      </span>
      <span
        class="hidden"
      >
        zendesk
      </span>
    </a>
  </div>
</div>
`;
